@@ -1,3 +1,6 @@
+2009-12-15 04:29-WIT Hans Baier <hansfbaier@googlemail.com>
+	* PBPbxMakefileGenerator.m: fix crash bug: double release
+
 2009-12-01 17:55-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* PBPbxNativeTarget.m: Replace @try/@catch with NS_DURING
@@ -8,7 +11,7 @@
 
 2009-09-02 Riccardo Mottola <rmottola@users.sf.net>
 	* PBPbxNativeTarget.[hm]: added snow leopard pbx constant
-	
+
 2009-08-16 09:36-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* PBPbxNativeTarget.m: Change to allow compilation of dynamic libs.
